force-app/main/default/objects/custom_create120__c/custom_create120__c.object-meta.xml
<CustomObject>
    <label>Custom created object120</label>
    <nameField>
        <label>Custom created field</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Custom created objects120</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>