force-app/main/default/objects/custom_create120__c/fields/custom_create_120field536__c.field-meta.xml
<CustomField>
    <fullName>custom_create_120field536__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Custom created 120field536</label>
    <type>Checkbox</type>
</CustomField>